# benchpark

./: .flake8  .gitignore  .gitlab-ci.yml  CITATION.cff  COPYRIGHT  LICENSE  README.md  README.rst  checkout-versions.yaml  pyproject.toml  pytest.ini  ramble.yaml  requirements.txt  spack.yaml  tags.yaml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  format.yml  label.yml  labeler.yml  license.yml  nightly.yml  run.yml  style.yml
.gitlab/ci/: test.yml
common-resources/: execute_experiment.tpl
configs/AWS-Hpc7a-EPYC4-EFA/: spack.yaml  system_definition.yaml
configs/AWS-ParallelCluster3.7.2-Hpc7a_AMD-EPYC-Zen4_AWS-EFA/: README.txt  system_definition.yaml
configs/AWS-ParallelCluster3.7.2_x86_none_EFA/: system_definition.yaml
configs/AWS-x86-ParallelCluster-3.7.2/: README.txt  variables.yaml
configs/AWS_PCluster_Hpc7a-zen4-EFA/: system_definition.yaml
configs/CSC-LUMI-HPECray-zen3-MI250X-Slingshot/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/CSC-Lumi-HPECray-zen3-MI250X-Slingshot/: system_definition.yaml  variables.yaml
configs/CSCS-Daint-HPECray-haswell-P100-Infiniband/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/CSCS-Eiger-HPECray-zen2-Slingshot/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/HPECray-EPYC3-MI250X-Slingshot/: system_definition.yaml
configs/HPECray-EX235a_AMD-EPYC_AMD-MI250X_Slingshot-11/: system_definition.yaml
configs/HPECray-zen3-MI250X-Slingshot/: spack.yaml  system_definition.yaml  variables.yaml
configs/IBM-AC922_IBM-POWER9_NVIDIA-Volta_Mellanox-EDRInfiniband/: system_definition.yaml
configs/IBM-POWER9-V100-Infiniband/: system_definition.yaml
configs/IBM-power9-V100-Infiniband/: modifier_variables.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/JSC-JUWELS-BOOSTER/: spack.yaml  system_definition.yaml  variables.yaml
configs/JSC-JUWELS-Booster-rome-A100-Infiniband/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/LLNL-Dane-DELL-sapphirerapids-OmniPath/: software.yaml  system_definition.yaml  variables.yaml
configs/LLNL-ElCapitan-HPECray-zen4-MI300A-Slingshot/: spack.yaml  system_definition.yaml  variables.yaml
configs/LLNL-Magma-Penguin-icelake-OmniPath/: caliper.yaml  spack.yaml  spack_config_variables.yaml  system_definition.yaml  variables.yaml  zips.yaml
configs/LLNL-Pascal-Penguin-broadwell-P100-OmniPath/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/LLNL-Ruby-icelake-OmniPath/: system_definition.yaml  variables.yaml
configs/LLNL-Sierra-IBM-power9-V100-Infiniband/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/LLNL-Tioga-HPECray-zen3-MI250X-Slingshot/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/LUMI-C-HPECray-zen3-MI250X-Slingshot/: system_definition.yaml  variables.yaml
configs/Penguin-XeonPlatinum-OmniPath/: system_definition.yaml
configs/Penguin-icelake-OmniPath/: modifier_variables.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/PenguinComputing-RelionCluster_Intel-XeonPlatinum924248C_Intel-OmniPath/: system_definition.yaml
configs/RCCS-Fugaku-A64FX-TofuD/: system_definition.yaml  variables.yaml
configs/RCCS-Fugaku-Fujitsu-A64FX-TofuD/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/RIKEN-Fugaku-Fujitsu-A64FX-TofuD/: spack.yaml  system_definition.yaml  variables.yaml
configs/TAMU-Grace-Dell-cascadelake-Infiniband/: software.yaml  spack.yaml  system_definition.yaml  variables.yaml
configs/ats2/: execute_experiment.tpl  spack.yaml  variables.yaml
configs/ats4/: ramble.yaml  (+3 more)
docs/: 0-for-the-impatient.rst  1-benchpark-setup.rst  1-checkout-benchpark.rst  1-getting-started.rst  2-benchpark-list.rst  2-browse-benchpark.rst  3-benchpark-workflow.rst  3-opt-benchpark-edit.rst  3-opt-edit-benchpark.rst  3-opt-edit-experiment.rst  4-benchmark-setup.rst  4-benchpark-setup.rst  4-setup-experiment.rst  5-build-experiment.rst  5-run-experiment.rst  6-run-experiment.rst  7-analyze-experiment.rst  FAQ-benchpark-repo.rst  FAQ-spack-ramble-dependence.rst  FAQ-what-to-rerun.rst  FAQ.rst  Makefile  about-benchpark.rst  add-a-benchmark.rst  add-a-dryrun.rst  add-a-generic-system-config.rst  add-a-site-specific-system-config.rst  add-a-system-config.rst  add-all.rst  add-an-experiment.rst  adding-a-benchmark.rst  adding-a-system-config.rst  available-system-specs.rst  basic-usage.rst  benchmark-list.rst  benchpark-help.rst  benchpark-setup.rst  benchpark-workflow.rst  browse-benchpark.rst  build-experiment.rst  (+28 more)
lib/: main.py  system.py
modifiers/: modifier_repo.yaml
raja-perf/: README
rambler/: README  rambler.sh
repo/: repo.yaml
repo/saxpy/: CMakeLists.txt  application.py  config.hh.in  package.py  saxpy.cc
script-resources/: merge-spack-config.py
(+337 files in other folders)
