[project]
name="benchpark"
description="An open collaborative repository for cross site benchmarking environments"
readme = "README.rst"
requires-python = ">=3.8"

[tool.black]
line-length = 88
color = true
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$|bin\/benchpark'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | repo
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
color_output = true

[tool.codespell]
skip = './docs/_build,./docs/_static'
ignore-words-list = 'fom'
